# syscleaner

./: .gitignore  README.md  pyproject.toml
syscleaner/: __init__.py  commands.py  main.py
syscleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
