[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syscleaner"
version = "0.1.0"
description = "Herramienta Linux"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["syscleaner"]

[project.scripts]
syscleaner = "syscleaner.main:main"